--- a/Changes
+++ b/Changes
@@ -44,3 +44,10 @@ Son olarak proje Microsoft Azure'da bulut sunucu üzerinde yayına alındı.
 7 Mart 2023
 Referans ilişki türünden embedded document ilişki türüne geçildi. İlişki türünde değişiklik olunca veri tabanı işlemlerinde değişiklik olması gerekti.
 Veri tabanı işlemlerinde gerekli değişiklikler yapıldı ve validationlarda ufak düzeltmeler yapıldı.
+
+9 Mart 2023
+İş ilanı veri tabanı nesnesine aktif ve pasiflik durumunu tutan bool tipinde property eklendi
+Read repository sınıfına bütün veri tabanı nesneleri için filtreli listeletme özelliği eklendi.
+İş ilanlarını aktif veya pasif olanları listeletme özelliği eklendi.
+Company için login işleminde hata vardı hata fixlendi.
+Projenin en güncel hali Azure bulut sunucuya aktarıldı.
