--- a/Changes
+++ b/Changes
@@ -73,4 +73,4 @@ Company veri tabanı nesnesine departman ve çalışan sayısı bilgileri eklend
 Bütün kütüphaneler en güncel sürüme güncellendi ve MediatR kütüphanesinin yeni konfigürasyonu yapıldı.
 
 29 Mart 2023
-Company id'ye göre şirket bilgilerini getirme işleminde eksik gelen email bilgisi için düzeltme yapıldı.
+Company id'ye göre şirket bilgilerini getirme işleminde email bilgisi gelmiyordu. Düzeltildi.
