--- a/Changes
+++ b/Changes
@@ -73,4 +73,7 @@ Company veri tabanı nesnesine departman ve çalışan sayısı bilgileri eklend
 Bütün kütüphaneler en güncel sürüme güncellendi ve MediatR kütüphanesinin yeni konfigürasyonu yapıldı.
 
 29 Mart 2023
-Company id'ye göre şirket bilgilerini getirme işleminde email bilgisi gelmiyordu. Düzeltildi.
+Employer id'ye göre şirket bilgilerini getirme işleminde email bilgisi gelmiyordu. Düzeltildi.
+
+30 Mart 2023 
+Employer id'ye göre pasif ve aktif iş ilanlarını listeletme eklendiç
