--- a/Changes
+++ b/Changes
@@ -85,3 +85,6 @@ Tutulan bu loglar Seq ile görselleştirildi.
 21 Nisan 2023
 En yüksek çalışan sayısına sahip kişiler listelendi.
 En yüksek maaşı olan iş ilanları listelendi.
+
+27 Nisan 2023
+AOP ile Log Aspect yazıldı.
