--- a/Changes
+++ b/Changes
@@ -88,3 +88,6 @@ En yüksek maaşı olan iş ilanları listelendi.
 
 27 Nisan 2023
 AOP ile Log Aspect yazıldı.
+
+6 Mayıs 2023
+Contact entity eklendi ve repository kodları, cqrs kodları yazıldı.
