--- a/Changes
+++ b/Changes
@@ -91,3 +91,6 @@ AOP ile Log Aspect yazıldı.
 
 6 Mayıs 2023
 Contact entity eklendi ve repository kodları, cqrs kodları yazıldı.
+
+7 Mayıs 2023
+Cv ekleme işlemi için business rule eklendi. Her kullanıcı sadece 1 tane cv ekleyebilir.
