--- a/Changes
+++ b/Changes
@@ -101,3 +101,6 @@ Contact validator eklendi.
 3 Haziran 2023
 Sisteme giriş yapan kullanıcının, kullanıcı adı, id ve rol bilgileri loglandı.
 İş ilanı için yeni endpoint ve query eklendi.
+
+6 Haziran 2023
+İş ilanı için yeni endpoint ve queryler eklendi.
